# ood

./: .gitignore  CMakeLists.txt  README.md
examples/: set_erase.cpp
lw1/SimUDuck/: SimUDuck.cpp
lw1/SimUDuckFunc/: SimUDuckFunc.cpp
lw2/WeatherStation/: Observer.h  WeatherData.h  main.cpp  test.cpp
lw3/coffee/: Beverages.h  Condiments.h  main.cpp
lw3/streams/: DataStream.h  EncriptionStream.h  FIleStream.h  MemoryStream.h  StreamCompression.h  StreamEncription.h  main.cpp  test.cpp
lw3/streams/files/: a.txt  b.txt
lw4/painting/: Canvas.h  Client.cpp  Client.h  Designer.cpp  Designer.h  ICanvas.h  IPictureDraftInfo.h  IShapeFactory.h  ImageCanvas.cpp  ImageCanvas.h  Painter.cpp  Painter.h  PictureDraft.cpp  PictureDraft.h  ShapeFactory.cpp  ShapeFactory.h  Shapes.h  instructions.txt  main.cpp  test.cpp
lw4/painting/files/: instructions.txt
lw4/painting/lib/: Color.h  Point.h
lw4/painting/shape/: Ellipse.cpp  Ellipse.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
lw5/editor/: CDocument.cpp  CDocument.h  CStreamEditorClient.cpp  CStreamEditorClient.h  IDocument.h  main.cpp
lw5/editor/command/: CCommandFactory.cpp  CCommandFactory.h  CInsertParagraphCommand.cpp  CInsertParagraphCommand.h  CUndoableCommandExecutor.cpp  CUndoableCommandExecutor.h  ICommand.h  ICommandExecutor.h  ICommandFactory.h  IUndoableCommandExecutor.h
lw5/editor/command/commands/: CAddDocumentItemToListCommand.cpp  CAddDocumentItemToListCommand.h  CDeleteDocumentItemFromListCommand.cpp  CDeleteDocumentItemFromListCommand.h  CReplaceTextCommad.cpp  CReplaceTextCommad.h  CResizeImageCommand.cpp  (+1 more)
lw5/editor/content/: CImage.cpp  CImage.h  CParagraph.cpp  CParagraph.h  IImage.h  IImageResource.h  IParagraph.h  IResource.h
lw5/editor/documentItem/: CConstDocumentItem.cpp  CConstDocumentItem.h  CDocumentItem.cpp  CDocumentItem.h  CDocumentItemList.cpp  CDocumentItemList.h  IDocumentItem.h  IDocumentItemList.h
lw5/editorTests/: test.cpp
lw6/objectAdapter/: main.cpp  test.cpp
lw7/slides/: CEllipse.cpp  CEllipse.h  CGroup.cpp  CGroup.h  CRectangle.cpp  CRectangle.h  CShape.cpp  CShape.h  CSlide.cpp  CSlide.h  CTriangle.cpp  CTriangle.h  ICanvas.h  IGroup.h  IShape.h  ImageCanvas.cpp  ImageCanvas.h  Point.h  RectFrame.h  Style.h  main.cpp
lw7/slides/files/: instructions.txt
lw8/gumball_machine/: GumBallMachineWithState.h  NaiveGumBallMachine.h  main.cpp  test.cpp
(+6 files in other folders)
